# ChangeLog for x11-misc/pathfinder
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/pathfinder/ChangeLog,v 1.10 2007/06/06 10:06:37 mabi Exp $

*pathfinder-1.6.27 (06 Jun 2007)

  06 Jun 2007; Matti Bickel <mabi@gentoo.org> +pathfinder-1.6.27.ebuild:
  version bump

  06 Jun 2007; Jeroen Roovers <jer@gentoo.org> pathfinder-1.6.25.ebuild:
  Stable for HPPA (bug #181017).

  19 May 2007; Matti Bickel <mabi@gentoo.org> -pathfinder-1.4.12.ebuild,
  -pathfinder-1.5.4.ebuild:
  clean old ebuilds

*pathfinder-1.6.25 (28 Mar 2007)

  28 Mar 2007; Matti Bickel <mabi@gentoo.org> +pathfinder-1.6.25.ebuild:
  Version bump

*pathfinder-1.6.19 (20 Dec 2006)

  20 Dec 2006; Matti Bickel <mabi@gentoo.org> -pathfinder-1.2.15.ebuild,
  +pathfinder-1.6.19.ebuild:
  revbump+cleanup

  30 Oct 2006; Matti Bickel <mabi@gentoo.org> pathfinder-1.2.15.ebuild,
  pathfinder-1.4.12.ebuild, pathfinder-1.5.4.ebuild:
  Killed ranged deps, set DEPEND (bug #153329)

  29 Oct 2006; Matti Bickel <mabi@gentoo.org> -pathfinder-1.0.53.ebuild:
  Removing stale ebuilds (bug #153234)

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove rphillips from metadata.xml as he's retired.

  04 Jul 2005; Jonathan Smith <smithj@gentoo.org> +metadata.xml:
  added metadata

*pathfinder-1.2.15 (07 May 2005)

  07 May 2005; <rphillips@gentoo.org> +pathfinder-1.0.53.ebuild,
  +pathfinder-1.2.15.ebuild, +pathfinder-1.4.12.ebuild,
  +pathfinder-1.5.4.ebuild:
  Added Yaakov Selkowitz's eclass based fox ebuilds for testing.
  Fixes #88924
