@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/shutterbug/shutterbug-1.6.27.ebuild,v 1.2 2007/07/13 05:09:41 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/shutterbug/shutterbug-1.6.27.ebuild,v 1.3 2007/10/09 05:40:15 jer Exp $
 
 inherit fox
 
@@ -8,7 +8,7 @@ DESCRIPTION="Screenshot utility based on the FOX Toolkit"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 hppa ~ppc ~ppc64 ~sparc ~x86"
 IUSE="jpeg png tiff"
 
 DEPEND="~x11-libs/fox-${PV}
