@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/shutterbug
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/shutterbug/ChangeLog,v 1.10 2007/10/01 01:33:22 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/shutterbug/ChangeLog,v 1.11 2007/10/09 05:40:15 jer Exp $
+
+  09 Oct 2007; Jeroen Roovers <jer@gentoo.org> shutterbug-1.6.27.ebuild:
+  Stable for HPPA (bug #194813).
 
 *shutterbug-1.6.29 (01 Oct 2007)
 
